fixes bio bg not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ section {
 }
 
 #bio-bg {
-  background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url(/images/IMG_1768.JPG);
+  background-image: linear-gradient(rgba(255, 255, 255, 0.75), rgba(255, 255, 255, 0.75)), url(/images/IMG_1768.jpg);
 }
 
 #photos-bg {
